--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,10 +51,18 @@ header .content {
   display: flex;
   align-items: center;
   padding: 1.875rem;
+  font-family: Roboto, sans-serif;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.6;
+  color: #4A4A4A; 
 }
 
 header .logo {
   flex: 1;
+  color: #4A4A4A;
+  text-decoration: none;
+  font-size: 24px;
 }
 
 header nav ul {
@@ -63,6 +71,7 @@ header nav ul {
 
 nav li {
   padding-left: 3.5rem;
+  list-style-type: none;
 }
 
 nav a {
