--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -43,8 +43,6 @@ header {
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
-  position: fixed;
-  width: 100%;
   top: 0px;
 }
 
@@ -118,10 +116,11 @@ header .desktop .tablet {
   header .mobile {
     display: block;
     width: 100%;
+    height: 48px;
   }
 
   header .content {
-    padding: .5rem 0;
+    padding: 0;
   }
 
   header .mobile ul {
