--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,7 +18,7 @@ html {
   border-radius: 4px;
   background-color: #4a4a4a;
   color: white;
-  padding: 8px 3px;
+  padding: 8px 3px; /*added*/
 }
 
 .image-container {
@@ -37,45 +37,46 @@ html {
 }
 
 /* Header */
-
 header {
   position: fixed;
+  z-index: 10;  /*added*/
   width: 100%;
   border-bottom: solid 1px #c6c1c1;
   background-color: white;
-  top: 0px;
+  top: 0px;  /*added*/
 }
 
 header .content {
   display: flex;
   align-items: center;
-  padding: 0.88rem 1.875rem;
-  font-weight: normal;
-  line-height: 1.6;
-  color: #4A4A4A; 
+  padding: 1.875rem;
+  font-weight: 400; /*added*/
+  /* line-height: 1.6; */
+  color: #4A4A4A; /*added*/
 }
 
 header .logo {
   flex: 1;
-  color: #4A4A4A;
-  text-decoration: none;
+  color: #4A4A4A; /*added*/
+  text-decoration: none; /*added*/
 }
 
 header nav ul {
   display: flex;
+  margin: 0;  /*added*/
 }
 
 nav li {
   padding-left: 3.5rem;
-  list-style-type: none;
+  list-style-type: none; /*added*/
 }
 
 nav a {
   vertical-align: bottom;
-  line-height: 1.6;
+  line-height: 1.6; /*added*/
   font-size: 1rem;
   color: #4a4a4a;
-  text-decoration: none;
+  text-decoration: none; /*added*/
 }
 
 header .icon {
@@ -87,28 +88,7 @@ header .mobile {
   display: none;
 }
 
-header .desktop .tablet {
-  display: none;
-}
-
-/* Tablet sizing*/
 @media only screen and (max-width: 760px) {
-  header .desktop .tablet {
-    display: inline;
-  }
-
-  header .desktop .button {
-    display: inline;
-    padding: .1875rem .5rem;
-    background-color: #9dc20b;
-    line-height: 1.6;
-    color: white;
-    text-decoration: none;
-  }
-}
-
-/* Mobile-phone sizing*/
-@media only screen and (max-width: 450px) {
   header .desktop {
     display: none;
   }
@@ -116,10 +96,11 @@ header .desktop .tablet {
   header .mobile {
     display: block;
     width: 100%;
-    height: 48px;
+    height: 48px; /*added*/
   }
 
   header .content {
+    /* padding: .5rem 0;  oG */
     padding: 0;
   }
 
@@ -139,11 +120,9 @@ header .desktop .tablet {
     background-color: #9dc20b;
     line-height: 1.6;
     color: white;
-    text-decoration: none;
+    text-decoration: none; /*added*/
   } 
 }
-
-
 
 /* Sign Up Section */
 
@@ -152,6 +131,10 @@ header .desktop .tablet {
   justify-content: flex-start;
   align-items: flex-start;
   height: 43.5rem;
+  background-image: url("../images/banner-landingpage.jpg"); /*added*/
+  background-position: bottom; /*added*/
+  background-size: cover; /*added*/
+  background-repeat: no-repeat; /*added*/
 }
 
 #sign-up-cta {
@@ -159,6 +142,9 @@ header .desktop .tablet {
   border: solid 1px #979797;
   border-radius: 4px;
   background-color: #9dc20b;
+  position: relative;  /*added*/
+  top: 170px;  /*added*/
+  left: 100px;  /*added*/
 }
 
 #sign-up-cta .content {
@@ -196,7 +182,7 @@ header .desktop .tablet {
   padding: 1.25rem 7.25rem;
 }
 
-/* Tablet sizing*/
+
 @media only screen and (max-width: 760px) {
   #sign-up-section {
     align-items: center;
@@ -229,7 +215,6 @@ header .desktop .tablet {
   }
 }
 
-/* Mobile-phone sizing*/
 @media only screen and (max-width: 450px) {
   #sign-up-section {
     height: 20rem;
@@ -280,7 +265,6 @@ header .desktop .tablet {
   color: #4a4a4a;
 }
 
-/*>normal tablet sizes */
 @media only screen and (max-width: 890px) {
   .feature h2 {
     font-size: 1.125rem;
@@ -294,7 +278,7 @@ header .desktop .tablet {
   }
 }
 
-/* Tablet sizing*/
+
 @media only screen and (max-width: 760px) {
   #features-section {
     flex-flow: column;
@@ -337,7 +321,6 @@ header .desktop .tablet {
   padding: 0 1%;
 }
 
-/* Tablet sizing*/
 @media only screen and (max-width: 760px) {
   #filters-section {
     padding: 1.5rem 0 0 0;
@@ -391,7 +374,7 @@ header .desktop .tablet {
   height: 1.875rem;
 }
 
-/* Tablet sizing*/
+
 @media only screen and (max-width: 760px) {
   #quotes-section content {
     padding: 1.875rem .625rem;
