--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,14 +51,12 @@ header .content {
   align-items: center;
   padding: 1.875rem;
   font-weight: 400; /*added*/
-  /* line-height: 1.6; */
   color: #4A4A4A; /*added*/
 }
 
 header .logo {
   flex: 1;
-  color: #4A4A4A; /*added*/
-  text-decoration: none; /*added*/
+  color: #4A4A4A;
 }
 
 header nav ul {
@@ -68,7 +66,6 @@ header nav ul {
 
 nav li {
   padding-left: 3.5rem;
-  list-style-type: none; /*added*/
 }
 
 nav a {
@@ -76,7 +73,6 @@ nav a {
   line-height: 1.6; /*added*/
   font-size: 1rem;
   color: #4a4a4a;
-  text-decoration: none; /*added*/
 }
 
 header .icon {
@@ -100,8 +96,7 @@ header .mobile {
   }
 
   header .content {
-    /* padding: .5rem 0;  oG */
-    padding: 0;
+    padding: .5rem 0;
   }
 
   header .mobile ul {
@@ -120,7 +115,6 @@ header .mobile {
     background-color: #9dc20b;
     line-height: 1.6;
     color: white;
-    text-decoration: none; /*added*/
   } 
 }
 
@@ -132,9 +126,6 @@ header .mobile {
   align-items: flex-start;
   height: 43.5rem;
   background-image: url("../images/banner-landingpage.jpg"); /*added*/
-  background-position: bottom; /*added*/
-  background-size: cover; /*added*/
-  background-repeat: no-repeat; /*added*/
 }
 
 #sign-up-cta {
