--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -86,6 +86,16 @@ header .mobile {
 }
 
 @media only screen and (max-width: 760px) {
+  header .mobile .button {
+    display: block;
+    padding: .1875rem .5rem;
+    background-color: #9dc20b;
+    line-height: 1.6;
+    color: white;
+  }
+}
+
+@media only screen and (max-width: 450px) {
   header .desktop {
     display: none;
   }
@@ -264,6 +274,8 @@ header .mobile {
   color: #4a4a4a;
 }
 
+
+/* I think this was supposed to be for tablets 760 */
 @media only screen and (max-width: 890px) {
   .feature h2 {
     font-size: 1.125rem;
@@ -372,22 +384,25 @@ header .mobile {
   color: #4a4a4a;
 }
 
-#quotes-section quote-citation {
+/* another broken section here this should be a class */
+#quotes-section .quote-citation {
   height: 1.875rem;
 }
 
-
+/* another broken section here this should be a class */
 @media only screen and (max-width: 760px) {
-  #quotes-section content {
+  #quotes-section .content {
     padding: 1.875rem .625rem;
   }
 
-  #quotes-section quote {
+  /* another broken section here this should be a class */
+  #quotes-section .quote {
     font-size: 1.5rem;
     line-height: 1.4;
   }
 
-  #quotes-section quote-citation {
+  /* another broken section here this should be a class */
+  #quotes-section .quote-citation {
     display: block;
     padding-top: 1rem;
     margin: auto;
