--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -275,8 +275,8 @@ header .mobile {
 }
 
 
-/* I think this was supposed to be for tablets 760 */
-@media only screen and (max-width: 890px) {
+/* I think this was supposed to be for mobile 450 not 890*/
+@media only screen and (max-width: 450px) {
   .feature h2 {
     font-size: 1.125rem;
     line-height: 1.3;
@@ -408,7 +408,6 @@ header .mobile {
     margin: auto;
   }
 }
-
 /* Footer */
 
 footer {
